cambio ruta botones

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="./pages/plan.html">
                     <button class="column">Plan </button>
                 </a>
-                <a href="./pages/arrivals.html">
+                <a href="./index.html">
                     <button class="column">Schedule</button>
                 </a>
             </div>    
