--- a/pages/plan.html
+++ b/pages/plan.html
@@ -23,24 +23,24 @@
 
         <div class="botones">
         <div class="boton1">
-            <a href="./pages/arrivals.html">
+            <a href="../pages/arrivals.html">
                 <button class="column">Arrivals</button>
             </a>
-            <a href="./pages/pages.html">
+            <a href="./plan.html">
                 <button class="column">Plan </button>
             </a>
-            <a href="./pages/arrivals.html">
+            <a href="/index.html">
                 <button class="column">Schedule</button>
             </a>
         </div>    
         <div class="boton1">
-            <a href="./pages/arrivals.html">
+            <a href="../pages/activities.html">
                 <button class="column">Activities</button>
             </a>
-            <a href="./pages/resources.html">
+            <a href="../pages/resources.html">
                 <button class="column">Resources</button>
             </a>
-            <a href="./pages/arrivals.html">
+            <a href="../pages/emergency.html">
                 <button class="column">Emergency</button>
             </a>
         </div>
