--- a/pages/resources.html
+++ b/pages/resources.html
@@ -23,25 +23,25 @@
 
         <div class="botones">
         <div class="boton1">
-            <a href="./activities.html">
-                <button class="column">Activities</button>
-            </a>
-            <a href="./pages/arrivals.html">
+            <a href="../pages/arrivals.html">
                 <button class="column">Arrivals</button>
             </a>
-            <a href="./pages/arrivals.html">
-                <button class="column">Arrivals</button>
+            <a href="../pages/plan.html">
+                <button class="column">Plan</button>
+            </a>
+            <a href="/index.html">
+                <button class="column">Schedule</button>
             </a>
         </div>    
         <div class="boton1">
-            <a href="./pages/arrivals.html">
-                <button class="column">Arrivals</button>
+            <a href="../pages/activities.html">
+                <button class="column">Activities</button>
             </a>
-            <a href="./resources.html">
+            <a href="../pages/resources.html">
                 <button class="column">Resources</button>
             </a>
-            <a href="./pages/arrivals.html">
-                <button class="column">Arrivals</button>
+            <a href="../pages/emergency.html">
+                <button class="column">Emergency</button>
             </a>
         </div>
         </div>
