Actualizar información en HTML y CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,20 +49,19 @@
             </div>
             <div class="botonnuevo">
                 <a href="./index.html">
-                    <button class="column">INICIO</button>
+                    <button class="column">Contact</button>
                 </a>
             </div>
-    
-                <div class="informacion">
-                    <div class="infoHotel"> <h2>Hotel grand brizo-Cerrito 180</h2>
-                    </div>
-                    <div class="infoHotel"><p>+541139857800</p></div>
-                    <div class="infoDirectores">
-                        <div class="nombres"><p>Claudio González Ch cgonzal@ +54-911-41802705</p></div>
-                        <div class="nombres"><p>María Marta Lamoretti mlamoret@ +54-911-50466532</p></div>
-                        <div class="nombres"><p>Alessandra Capossela acapossela@ +1-802-443-2294</p></div>
-                    </div>
-
+            <div class="informacion">
+                <div class="infoHotel"> <h2>Hotel Grand Brizo-Cerrito 180</h2>
+                </div>
+                <div class="infoHotel"><p>+541139857800</p></div>
+                <div class="infoDirectores">
+                    <div class="nombres"><p>Claudio González Ch cgonzal@ +54-911-41802705</p></div>
+                    <div class="nombres"><p>María Marta Lamoretti mlamoret@ +54-911-50466532</p></div>
+                    <div class="nombres"><p>Alessandra Capossela acapossela@ +1-802-443-2294</p></div>
+                </div>
+                
 
             </div>
         </section>
