--- a/pages/activities.html
+++ b/pages/activities.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Activities</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
             <a href="./activities.html">
                 <button class="column">Activities</button>
             </a>
-            <a href="../resources.html">
+            <a href="../pages/resources.html">
                 <button class="column">Resources</button>
             </a>
             <a href="../pages/emergency.html">
@@ -47,7 +47,7 @@
         </div>
         <div class="botonnuevo">
             <a href="../index.html">
-                <button class="column">INICIO</button>
+                <button class="column">Contact</button>
             </a>
         </div>
         <div class="subActivities">
