--- a/pages/arrivals.html
+++ b/pages/arrivals.html
@@ -48,27 +48,26 @@
             </div>
             <div class="botonnuevo">
                 <a href="../index.html">
-                    <button class="column">INICIO</button>
+                    <button class="column">Contact</button>
                 </a>
             </div>
             <div class="subActivities">
                 <h2>Arrivals</h2>
             </div> 
             <section class="sectionPrincipala">
-                <div><h2>D's MEETING- BUENOS AIRES 2023</h2></div>
-                <div><h3>ARRIVAL INFORMATION</h3></div>
+                <h2>D's MEETING- BUENOS AIRES 2023</h2>
+                <h3>ARRIVAL INFORMATION</h3>
                 <div class="textoA">
                     <div class="texto1">
-                        <p>Middlebury-School in Argentina will make a reservation, in advance, for a transfer service called
-                        VIP Car to take you from the airport to your hotel in Buenos Aires. 
-                        <br> <br>The transfer company is called VIP Car and its booth is at the Ezeiza airport, you will see their
-                        booth right after passing through Customs (on the left side) and before arriving to the main
+                        <p>Middlebury-School in Argentina will make a <b>reservation</b> under your name, in advance, for a transfer service called
+                        Taxi Ezeiza to take you from the airport to your hotel in Buenos Aires. 
+                        <br> <br>The company´s booth is at the Ezeiza airport: you will see their
+                        booth right after leaving the restricted zone, at the center of the main arrivals hole.The 
                         arrivals hall. The 21-mile ride takes about 45 minutes to 1 hour, and the rate is about USD $ 57 (in
-                        cash).  We advise paying the service with your credit card (not in cash), since you will get a better
+                        cash).We advise paying the service with your credit card (not in cash), since you will get a better
                         exchange rate.
-                        <br><br>In any case, we strongly advise taking only a registered remise (a private, hired car service) or a
-                        registered taxi from the airport, such as Taxi Ezeiza (authorized taxis) booths for which are all
-                        based right inside the main Arrivals Hall. There are quite a few unscrupulous taxi drivers at the
+                        <br><br>In any other case, we strongly advise taking only a registered remise (a private, hired car service) or a
+                        registered taxi from the airport, such as Vip Car. There are quite a few unscrupulous taxi drivers at the
                         airport who take advantage of tourists unfamiliar with Buenos Aires, so it is best to stay safe and
                         go with a registered driver that you request at a booth.
                         </p>
@@ -80,9 +79,9 @@
                     </div>
 
                     <div class="textoA">
-                        <div class="divP"><p>-Have your address in BA, if different from Midd’s meeting, ready to report to VIP Car</p></div>
+                        <div class="divP"><p>-Have your address in BA, if different from Midd’s meeting, ready to report to Taxi Ezeiza</p></div>
                         <div class="divP"><p>-Please notify Alessandra or BA of that specific address</p></div>
-                        <div class="divP"><p>-Please notify us if you are not going straight to your hotel on arrival</p></div>
+                        <div class="divP"><p>-Please notify us if you are not going straight to your hotel on arrival (we´ll be discreet...)</p></div>
                         <div class="divP"><p>-If somebody will be picking you up at the airport and you do not need the VIP Car service, please
                             notify the BA people before arrival</p></div>
                     </div>
