--- a/pages/emergency.html
+++ b/pages/emergency.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Emergency</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
     
             <div class="botones">
             <div class="boton1">
-                <a href="./pages/arrivals.html">
+                <a href="../pages/arrivals.html">
                     <button class="column">Arrivals</button>
                 </a>
                 <a href="../pages/plan.html">
@@ -55,7 +55,7 @@
             </div>
             <div class="botonnuevo">
                 <a href="../index.html">
-                    <button class="column">INICIO</button>
+                    <button class="column">Contact</button>
                 </a>
             </div>
             </div>
