--- a/pages/plan.html
+++ b/pages/plan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Plan</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,7 +47,7 @@
         </div>
         <div class="botonnuevo">
             <a href="../index.html">
-                <button class="column">INICIO</button>
+                <button class="column">Contact</button>
             </a>
         </div>
         <div class="subActivities">
