--- a/pages/resources.html
+++ b/pages/resources.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Resources</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,7 +47,7 @@
         </div>
         <div class="botonnuevo">
             <a href="../index.html">
-                <button class="column">INICIO</button>
+                <button class="column">Contact</button>
             </a>
         </div>
         <div class="subActivities">
@@ -56,7 +56,7 @@
         <section class="sectionPrincipal">
             <section class="calleCerrito">
 
-                <div><h2>Calle Cerrito</h2></div>
+            <h2>Calle Cerrito</h2>
 
             <div class="ATMs">
                 <ul> <h3>ATMs</h3>
@@ -95,7 +95,7 @@
             </div>
             </section>
             <section class="avenidaCorrientes">
-                <div><h2>AVENIDA CORRIENTES</h2></div>
+                <h2>AVENIDA CORRIENTES</h2>
                 
                 <div class="ATMs">
                     <ul><h3>ATMs</h3>
