--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <h1>School Argentina & Uruguay Director´s conference</h1>
+        <h1>School in Argentina & Uruguay - Director´s Conference</h1>
         <div><h2>11/28-12/3-2023</h2></div>
 </header>
     <main>
