--- a/pages/arrivals.html
+++ b/pages/arrivals.html
@@ -15,7 +15,7 @@
 <body>
     <body>
         <header>
-            <h1>School Argentina & Uruguay Director´s conference</h1>
+            <h1>School Argentina & Uruguay - Director´s Conference</h1>
             <div><h2>11/28-12/3-2023</h2></div>
     </header>
     <main>
