Se agrega schedule.html

--- a/pages/activities.html
+++ b/pages/activities.html
@@ -29,7 +29,7 @@
             <a href="../pages/plan.html">
                 <button class="column">Plan</button>
             </a>
-            <a href="../index.html">
+            <a href="../pages/shcedule.html">
                 <button class="column">Schedule</button>
             </a>
         </div>    
