--- a/pages/emergency.html
+++ b/pages/emergency.html
@@ -37,7 +37,7 @@
                 <a href="../pages/plan.html">
                     <button class="column">Plan </button>
                 </a>
-                <a href="/index.html">
+                <a href="../pages/shcedule.html">
                     <button class="column">Schedule</button>
                 </a>
             </div>    
